--- a/09day/nav3.html
+++ b/09day/nav3.html
@@ -8,33 +8,63 @@
 
 </head>
 <body>
+    <div class="header-top">
+        <ul class="location">
+            <li>
+                <a href="#">
+                    <span>
+                        <img src="images/icon-location.png">
+                    공식</span></a>
+            </li>                       
+            <li><a href="#">강남</a></li>
+            <li><a href="#">강남 IT</a></li>
+            <li><a href="#">종로</a></li>
+            <li><a href="#">신촌</a></li>
+            <li><a href="#">노원</a></li>
+            <li><a href="#">상봉</a></li>
+            <li><a href="#">송파</a></li>
+            <li><a href="#">인천 직영</a></li>
+            <li><a href="#">안양</a></li>
+            <li><a href="#">의정부</a></li>
+            <li><a href="#">구리</a></li>
+            <li><a href="#">일산</a></li>
+            <li><a href="#">안산</a></li>
+            <li><a href="#">김포</a></li>
+            <li><a href="#">하남미사</a></li>
+            <li><a href="#">전주</a></li>
+            <li><a href="#">이젠 IT</a></li>
+            <li><a href="#">가산IT</a></li>
+        </ul>
+    </div> <!--header-top end-->
     <div class="header-middle">
-        <img class="best" src="images/common2023.png" alt="우수훈련기관">
-        <h1 class="logo">
-            <a href="#" title="이젠아카데미">
-                <img src="images/logo-new2208.png" alt="이젠아카데미 로고"></a>       
-        </h1>
-        <div class="menu-group">
-            <ul class="lnb">
-                <li><a href="#">캠퍼스위치</a></li>
-                <li><a href="#">온라인에듀</a></li>
-                <li><a href="#">Festa! 2025</a></li>
-                <li><a href="#">수강후기</a></li>
-                <li><a href="#"><span class="month">5</span>
-                    월 개강일</a></li>
-            </ul>
-            <ul class="gnb">
-                <li>
-                    <a href="#"><span><img src="images/icon-sign.png"></span>
-                        회원가입</a>
-                </li>
-                <li>
-                    <a href="#"><span><img src="images/icon-login.png"></span>
-                        로그인</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+        <div class="header-middle-inner">
+            <img class="best" src="images/common2023.png" alt="우수훈련기관" width="30%">
+            <h1 class="logo">
+                <a href="#" title="이젠아카데미">
+                    <img src="images/logo-new2208.png" alt="이젠아카데미 로고"></a>       
+            </h1>
+            <div class="menu-group">
+                <ul class="lnb">
+                    <li><a href="#">캠퍼스위치</a></li>
+                    <li><a href="#">온라인에듀</a></li>
+                    <li><a href="#">Festa! 2025</a></li>
+                    <li><a href="#">수강후기</a></li>
+                    <li><a href="#"><span class="month">5</span>
+                        월 개강일</a></li>
+                </ul>
+                <ul class="gnb">
+                    <li>
+                        <a href="#"><span><img src="images/icon-sign.png"></span>
+                            회원가입</a>
+                    </li>
+                    <li>
+                        <a href="#"><span><img src="images/icon-login.png"></span>
+                            로그인</a>
+                    </li>
+                </ul>
+            </div> <!--menu-group end-->
+        </div> <!--header-middle-inner end-->
+    </div> <!--header-middle end-->
     <div class="header-bottom">    
         <a class="togle_w" href="#" title="메뉴"><img src="images/btn-toggle-w.png" alt="접이식메뉴"></a>
         <ul class="ezenac-nav">
