--- a/test/exen_nav_test/exen_nav_test.html
+++ b/test/exen_nav_test/exen_nav_test.html
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="master.css">
 </head>
+
 <body>
-    <ul>
-        <li><a href="#">공식</li>
-        <li><a href="#">강남</li>
-        <li><a href="#">종로</li>
-        <li><a href="#">신촌</li>
-        <li><a href="#">노원</li>
-        <li><a href="#">송파</li>
-        <li><a href="#">안양</li>
-        <li><a href="#">안산</li>
-        <li><a href="#">전주</li>
-        <li><a href="#">부산</li>
-        <li><a href="#">제주도</li>
-        <li><a href="#">미국</li>              
-    </ul>
+    <div class="header-top">
+        <ul class="location">
+            <li><a href="#">공식</a></li>
+            <li><a href="#">강남</a></li>
+            <li><a href="#">종로</a></li>
+            <li><a href="#">신촌</a></li>
+            <li><a href="#">노원</a></li>
+            <li><a href="#">송파</a></li>
+            <li><a href="#">안양</a></li>
+            <li><a href="#">안산</a></li>
+            <li><a href="#">전주</a></li>
+            <li><a href="#">부산</a></li>
+            <li><a href="#">제주도</a></li>
+            <li><a href="#">미국</a></li>
+        </ul>
+    </div>
+    <div class="header-middle">
+        <div class="header-middle-inner">
+            <img class="best" src="images/common2023.png" alt="우수훈련기관">
+            <h1 class="logo">
+                <img src="images/logo-new2208.png" alt="로고">
+            </h1>
+            <div class="menu-group">
+                <ul class="lnb">
+                    <li><a href="#">캠퍼스위치</a></li>
+                    <li><a href="#">온라인</a></li>
+                    <li><a href="#">수강후기</a></li>
+                    <li><a href="#">시간표</a></li>
+                </ul>
+                <ul class="gnb">
+                    <li><a href="#">회원가입</a></li>
+                    <li><a href="#">로그인인</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
