header-bottom 나열열

--- a/test/exen_nav_test/exen_nav_test.html
+++ b/test/exen_nav_test/exen_nav_test.html
@@ -44,7 +44,17 @@
                 </ul>
             </div>
         </div>
-
+    <div class="header-bottom">
+        <ul class="ex-nav">
+            <li><a href="#">하이테크</a></li>
+            <li><a href="#">프로그래머·개발자</a></li>
+            <li><a href="#">웹·영상·편집 디자인</a></li>
+            <li><a href="#">건축·기계</a></li>
+            <li><a href="#">빅데이터사이언스</a></li>
+            <li><a href="#">경영·마케팅· 비즈니스</a></li>
+            <li><a href="#">자격증·전기자격증</a></li>
+            <li><a href="#">국비 온라인</a></li>
+        </ul>
     </div>
 </body>
 
