--- a/test/exen_nav_test/exen_nav_test.html
+++ b/test/exen_nav_test/exen_nav_test.html
@@ -56,6 +56,26 @@
             <li><a href="#">국비 온라인</a></li>
         </ul>
     </div>
+    <div>  
+        <ul>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">강남</a></li>
+            <li><a href="#">강남 IT</a></li>
+            <li><a href="#">종로</a></li>
+            <li><a href="#">신촌</a></li>
+            <li><a href="#">노원</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+            <li><a href="#">공식</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
