--- a/test/exen_nav_test/exen_nav_test.html
+++ b/test/exen_nav_test/exen_nav_test.html
@@ -56,8 +56,8 @@
             <li><a href="#">국비 온라인</a></li>
         </ul>
     </div>
-    <div>  
-        <ul>
+    <div class="top2">  
+        <ul class="top2-1">
             <li><a href="#">공식</a></li>
             <li><a href="#">강남</a></li>
             <li><a href="#">강남 IT</a></li>
