--- a/10day/sub.html
+++ b/10day/sub.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>서브메뉴 띄우기</title>
+    <link rel="stylesheet" href="master.css">
+    <style>
+        *{margin: 0;}
+        a{
+            color: #333;
+            text-decoration: none;
+        }
+        ul{list-style: none;}
+    </style>
 </head>
 
 <body>
@@ -14,9 +23,9 @@
             <ul>
                 <li><a href="#">기초시각디자인</a></li>
                 <li><a href="#">드로잉(인체/컨셉)</a></li>
-                <li><a href="#">드로잉(인체/컨셉)</a></li>
-                <li><a href="#">드로잉(인체/컨셉)</a></li>
-                <li><a href="#">드로잉(인체/컨셉)</a></li>
+                <li><a href="#">스케치(실내/건축/제품)</a></li>
+                <li><a href="#">아트웍디자인(일러+포토)</a></li>
+                <li><a href="#">아이디어 스케치(UX/UI)</a></li>
             </ul>
         </li>
         <li>
