--- a/10day/sub.html
+++ b/10day/sub.html
@@ -20,122 +20,133 @@
         - 6.::before, ::after를 이용해서 상단 줄효과주기(a::content ''지정필요)
         - 7.서브메뉴(absolute)를 부모메뉴(relative)를 기준으로 위치이동하기()
         */
-        .mainMenu{
+
+        .header{
             background: #333;
-            overflow: hidden;            
+        }
+        .mainMenu{            
+            /* overflow: hidden; */
+            height: 50px; /*메인 nav의 높이값은 변경이 잘 안되니까 overflow: hidden 대신 높이값을 준다.*/
+            /* border: 1px solid red; */
+            width: 916px;
+            margin: 0 auto;
         }        
         .mainMenu>li{
             float: left;
-            margin: 0 10px;   
+            margin: 0 10px;
+            position: relative; /*.subMen의 absolute*/
         }      
         .mainMenu>li>a{ /* 5번*/
+            color: #fff;
+            font-size: 13px;
             display: block;
             padding: 0 15px;
-            line-height: 50px;
-            color: #fff;
+            line-height: 50px;            
             position: relative; /*a:before absolute의 기준*/
-            width: 150px;
         }
         .mainMenu>li>a:before{
             content: ' ';
-            width: 0%;
-            height: 5px;            
+            width: 0%; 
+            height: 3px;            
             background:  orange;
             position: absolute;
             left: 0;
             top: 0;
-            transition: width .5s ease-in;   
+            transition: width .5s ease-in;  /* 초기값이 있는 상태에 작성을 해야한다.여기에 써야한다. */ 
         }
         .mainMenu>li>a:hover:before{
             width: 100%;
         }
         .mainMenu>li>.subMenu>li>a{
-             color: #fff;
-             line-height: 30px;
+            font-size: 13px;
+             /* color: #fff; */
+             /* line-height: 30px; */
         }
         .subMenu{
             position: absolute;
-            right: 0;
-            bottom: 0;
+            left: 0;
+            top: 50px;
         }
     </style>
 </head>
 
 <body>
-    <ul class="mainMenu">
-        <li>
-            <a href="#">아트웍</a>
-            <ul class="subMenu">
-                <li><a href="#">기초시각디자인</a></li>
-                <li><a href="#">드로잉(인체/컨셉)</a></li>
-                <li><a href="#">스케치(실내/건축/제품)</a></li>
-                <li><a href="#">아트웍디자인(일러+포토)</a></li>
-                <li><a href="#">아이디어 스케치(UX/UI)</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">SW개발</a>
-            <ul class="subMenu">
-                <li><a href="#">C언어</a></li>
-                <li><a href="#">자바(Java)</a></li>
-                <li><a href="#">정보처리 자격증</a></li>
-                <li><a href="#">파이썬(Python)-응용SW 엔지니어링</a></li>
-                <li><a href="#">자바 JAVA 프로그래밍 -응용SW 엔지니어링</a></li>
-                <li><a href="#">C, C++ 프로그래밍-응용SW 엔지니어링 </a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">웹디자인</a>
-            <ul class="subMenu">
-                <li><a href="#">웹퍼블리셔(자바스크립트,제이쿼리,반응형웹디자인)기본</a></li>
-                <li><a href="#">Adobe XD를 활용한 인터렉티브 UI 제작</a></li>
-                <li><a href="#">그래픽 디자인(일러+포토)</a></li>
-                <li><a href="#">웹표준&웹접근성</a></li>
-                <li><a href="#">HTML5 & CSS3</a></li>
-                <li><a href="#">Javascript & jQuery</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">편집디자인</a>
-            <ul class="subMenu">
-                <li><a href="#">재직자+일반포토샵 (Photoshop)</a></li>
-                <li><a href="#">일러스트레이터 (Illustrator) 향상과정</a></li>
-                <li><a href="#">인디자인(InDesign)</a></li>
-                <li><a href="#">그래픽 디자인(일러+포토)</a></li>
-                <li><a href="#">모바일 광고 콘텐츠 제작(블로그, 페이스북, 인스타그램)</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">건축·산업디자인</a>
-            <ul class="subMenu">
-                <li><a href="#">캐드(AutoCAD)</a></li>
-                <li><a href="#">스케치업 (SketchUp)</a></li>
-                <li><a href="#">맥스(3D-MAX, V-ray)</a></li>
-                <li><a href="#">BIM(레빗,Revit)</a></li>
-                <li><a href="#">전산응용건축제도</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">게임/영상/마야</a>
-            <ul class="subMenu">
-                <li><a href="#">디지털 영상편집디자인(프리미어, 에프터이펙트)</a></li>
-                <li><a href="#">CG&VFX 프로젝트</a></li>
-                <li><a href="#">영상편집(프리미어,에프터이펙트)</a></li>
-                <li><a href="#">시네마4D(Cinema4D)</a></li>
-                <li><a href="#">영상편집제작-애프터이펙트(AfterEffects)고급</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">세무회계/OA</a>
-            <ul class="subMenu">
-                <li><a href="#">재경관리사(재무회계,원가관리회계,세무회계)자격증 취득과정</a></li>
-                <li><a href="#">전산회계1급 자격취득-세무</a></li>
-                <li><a href="#">전산세무1급 자격취득 과정</a></li>
-                <li><a href="#">엑셀(Excel)-사무행정</a></li>
-                <li><a href="#">컴퓨터활용능력 1급 자격취득-사무행정</a></li>
-            </ul>
-        </li>
-    </ul>
+    <div class="header">    
+        <ul class="mainMenu">
+            <li>
+                <a href="#">아트웍</a>
+                <ul class="subMenu">
+                    <li><a href="#">기초시각디자인</a></li>
+                    <li><a href="#">드로잉(인체/컨셉)</a></li>
+                    <li><a href="#">스케치(실내/건축/제품)</a></li>
+                    <li><a href="#">아트웍디자인(일러+포토)</a></li>
+                    <li><a href="#">아이디어 스케치(UX/UI)</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">SW개발</a>
+                <ul class="subMenu">
+                    <li><a href="#">C언어</a></li>
+                    <li><a href="#">자바(Java)</a></li>
+                    <li><a href="#">정보처리 자격증</a></li>
+                    <li><a href="#">파이썬(Python)-응용SW 엔지니어링</a></li>
+                    <li><a href="#">자바 JAVA 프로그래밍 -응용SW 엔지니어링</a></li>
+                    <li><a href="#">C, C++ 프로그래밍-응용SW 엔지니어링 </a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">웹디자인</a>
+                <ul class="subMenu">
+                    <li><a href="#">웹퍼블리셔(자바스크립트,제이쿼리,반응형웹디자인)기본</a></li>
+                    <li><a href="#">Adobe XD를 활용한 인터렉티브 UI 제작</a></li>
+                    <li><a href="#">그래픽 디자인(일러+포토)</a></li>
+                    <li><a href="#">웹표준&웹접근성</a></li>
+                    <li><a href="#">HTML5 & CSS3</a></li>
+                    <li><a href="#">Javascript & jQuery</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">편집디자인</a>
+                <ul class="subMenu">
+                    <li><a href="#">재직자+일반포토샵 (Photoshop)</a></li>
+                    <li><a href="#">일러스트레이터 (Illustrator) 향상과정</a></li>
+                    <li><a href="#">인디자인(InDesign)</a></li>
+                    <li><a href="#">그래픽 디자인(일러+포토)</a></li>
+                    <li><a href="#">모바일 광고 콘텐츠 제작(블로그, 페이스북, 인스타그램)</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">건축·산업디자인</a>
+                <ul class="subMenu">
+                    <li><a href="#">캐드(AutoCAD)</a></li>
+                    <li><a href="#">스케치업 (SketchUp)</a></li>
+                    <li><a href="#">맥스(3D-MAX, V-ray)</a></li>
+                    <li><a href="#">BIM(레빗,Revit)</a></li>
+                    <li><a href="#">전산응용건축제도</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">게임/영상/마야</a>
+                <ul class="subMenu">
+                    <li><a href="#">디지털 영상편집디자인(프리미어, 에프터이펙트)</a></li>
+                    <li><a href="#">CG&VFX 프로젝트</a></li>
+                    <li><a href="#">영상편집(프리미어,에프터이펙트)</a></li>
+                    <li><a href="#">시네마4D(Cinema4D)</a></li>
+                    <li><a href="#">영상편집제작-애프터이펙트(AfterEffects)고급</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">세무회계/OA</a>
+                <ul class="subMenu">
+                    <li><a href="#">재경관리사(재무회계,원가관리회계,세무회계)자격증 취득과정</a></li>
+                    <li><a href="#">전산회계1급 자격취득-세무</a></li>
+                    <li><a href="#">전산세무1급 자격취득 과정</a></li>
+                    <li><a href="#">엑셀(Excel)-사무행정</a></li>
+                    <li><a href="#">컴퓨터활용능력 1급 자격취득-사무행정</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
