--- a/10day/sub.html
+++ b/10day/sub.html
@@ -78,7 +78,7 @@
             display: block;
         }
         .mainMenu>li:last-child>.subMenu{
-            left: -290px; !important;
+            left: -290px; 
         }
     </style>
 </head>
