--- a/10day/table1.html
+++ b/10day/table1.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3*4 테이블</title>
+    <style>
+       table{
+            /* border: 1px solid #000; */
+            width: 400px;
+            height: 300px;
+            border-collapse: collapse; /*셀과 셀 사이의 여백을 제거 */
+       }
+       th, td{ /*td에 넣어줘야 줄이 생긴다.*/
+            border: 1px solid green;
+       }
+    </style>
 </head>
 <body>
-    
+    <table>
+        <caption>2학기 기말고사 성적표</caption> 
+        <tr>
+            <th colspan="4">2학기 기말고사 성적표</th> 
+        </tr>
+        <tr>
+            <td>2*1</td>
+            <td>2*2</td>
+            <td>2*3</td>
+            <td>2*4</td>
+        </tr>
+        <tr>
+            <td>3*1</td>
+            <td>3*2</td>
+            <td>3*3</td>
+            <td>3*4</td>
+        </tr>
+    </table>
 </body>
 </html>
+<!-- 
+table은 특정 데이터를 간결하게 정렬하고자 할 때 사용
+기본 형식
+<table>
+    <caption>표의 제목</caption> -> 웹문서에서는 제목을 위에 작성함. 음성리더기에서 읽어주기위함. / 표의 제목은 언제나 가운데.
+    <tr>행(row)
+        <th>칸의 제목</th> -> 글자가 굵게 표현+가운데 정렬
+        <td>행(column)</td> -> 왼쪽 정렬이 기본
+    </tr>
+</table>
+
+줄방향 합치기 -> rowspan / rowspan="합칠 갯수"
+칸방향 합치기 -> columnspan / colspan="합칠 갯수"
+ -->
