--- a/10day/table1.html
+++ b/10day/table1.html
@@ -5,18 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3*4 테이블</title>
     <style>
-       table{
+        caption{
+            margin-bottom: 18px;
+        }
+        table{
             /* border: 1px solid #000; */
             width: 400px;
             height: 300px;
             border-collapse: collapse; /*표과 셀 사이의 여백을 제거 */
-       }
-       th, td{ /*td에 넣어줘야 줄이 생긴다.*/
-            border: 1px solid green;
-       }
-       td{
-        text-align: center;
-       }
+        }
+        tr:nth-child(1)>th{
+                background: url(image/flower.png);
+        }
+        th, td{ /*td에 넣어줘야 줄이 생긴다.*/
+                border: 1px solid green;
+        }
+        td{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
