--- a/10day/table-bbs.html
+++ b/10day/table-bbs.html
@@ -59,6 +59,7 @@
             <!-- 
             col -> 칸을 새로 방향으로 묶어서 너비나 특정스타일을 지정
             colgroup -> col이 여러개일 때 묶어줌.
+            * 칸과 줄이 시작하기전에 적어야함.
             -->     
             <colgroup>
                 <col width="10%">
