--- a/11day/table2.html
+++ b/11day/table2.html
@@ -32,10 +32,10 @@
             <th colspan="4">2학기 기말고사 성적표</th> 
         </tr>
         <tr>
-            <th rowspan="2">과목별 점수</th>
-            <th>국어</th>
-            <th>영어</th>
-            <th>수학</th>
+            <th rowspan="2" scope="col">과목별 점수</th>
+            <th scope="col">국어</th>
+            <th scope="col">영어</th>
+            <th scope="col">수학</th>
         </tr>
         <tr>            
             <td>99</td>
