--- a/12day/twoColLayout.html
+++ b/12day/twoColLayout.html
@@ -17,19 +17,24 @@
             font: 400 14px "Nanum Gothic, sans-serif";
         }
 
-        /*layout style*/       
+        /*layout style*/  
+        #header,
+        #contents,
+        #footer{
+            padding: 10px;
+            overflow: hidden;
+        }
+        #header,
+        #footer{
+            background: #555;
+        }     
         #wrapper{
             width: 720px;
             margin: 0 auto;
         }
-        #header{            
-            background: #555;
+        #header{  
             position: relative; 
-        }
-        #contents{
-            /* background: green; */
-            overflow: hidden;
-        }       
+        }             
         #nav{
             width: 180px;           
             /* background: #fff; */
@@ -40,65 +45,65 @@
             /* background: blueviolet; */
             float: right;
         }
-        #footer{          
-            background: #555;
+        #footer{
             clear: both;
         }
-        #header,
-        #contents,
-        #maincontent,
+        #maincontent>p,
         #footer{
-            padding: 10px;
+            line-height: 21px;
         }
 
         
+        
         /*header style*/  
-        #header>h1{
-            padding: 10px;
+        h1{
+            float: left;
         }    
         #header>p{     
-            position: absolute;       
-            right: 50px;
-            top: 30px;
+            float: right;
+            padding-top: 10px;
             color: #fff;
         }
 
-        /*lnb style*/
-        #nav>ul>li{
-            margin : 5px 0;
-            padding: 10px 0;
+
+        /*lnb style_li자체에 위치를 잡고 호버를 넣은 것_ul,li 건둘여야해서 
+        #contents>#nav>ul{           
+            padding: 20px 0;
         }
-        #nav>ul>li{
-            position: relative;
+        #contents>#nav>ul>li{
+            width: 90%;
+            padding: 5px; 
+            border-bottom: 1px dotted #222;
+        } 
+        #contents>#nav>ul>li:hover{
+            background: #c5c5c5;
         }
-        #nav>ul>li:before{
-            content: ' ';
-            width: 150px;
-            height: 1px;
-            border-top: 1px solid rgb(0, 139, 127);
-            position: absolute;
-            left: 0;
-            top: 40px;
+        #contents>#nav>ul>li>a:hover{
+            color: #fff;  
         }
-        #nav>ul>li:hover{
-            background: #c5c5c5;  
-            width: 150px; 
+        */
+
+        /*lnb style*_쌤이 해준게 간단*/
+        #contents>#nav>ul>li>a{
+            display: block;   
+            line-height: 25px;   
+            border-bottom: 1px dotted #222; 
+            text-indent: 14px; /*들여쓰기*/
         }
-        #nav>ul>li:hover>a{
-            color: #fff;   
+        #contents>#nav>ul>li:hover{
+            background: #c5c5c5;
+        }
+        #contents>#nav>ul>li>a:hover{
+            color: #fff;  
         }
 
         /* maincontent style */
-        #maincontent{
-            padding-bottom: 50px;
-        }
         #maincontent>h2{
-            margin-bottom: 15px;
+            margin: 20px 15px;
         }
         #maincontent>p{
-            margin-bottom: 15px;
+            margin: 0 0 20px 10px;
             text-indent: 14px;
-            line-height: 23px;
             word-spacing: 2px; /*단어 사이의 여백*/
         }
 
@@ -107,8 +112,6 @@
             text-align: center;
             color: #fff;
         }
-
-
     </style>
 </head>
 <body>
@@ -150,7 +153,7 @@
         </div>  
         <div id="footer">
            <p>copyright 2025 ⓒ (주)MBC아카데미 . all rights reserved.</p>
-            <p>단 레이아웃</p>
+           <p>2단 레이아웃</p>
         </div>
     </div>
 </body>
