--- a/13day/threeColLayout.html
+++ b/13day/threeColLayout.html
@@ -51,6 +51,9 @@
             overflow: hidden;
             border-bottom: 1px solid skyblue;
         }
+        #contents{
+            padding-bottom: 50px;
+        }
         #contents>#nav{
             width: 180px;
             float: left;
@@ -67,6 +70,7 @@
             width: 180px;
             float: right;
         }
+        
 
         /* header style */
         h1{
@@ -75,39 +79,47 @@
         #header>p{
             float: left;
             /* padding: 15px 0 0 100px; */
-            margin-left: 20px;
+            margin-left: 90px;
             padding-top: 15px;
         }
 
-        /*lnb style*/        
+        /*lnb style*/      
+        #nav>ul{
+            padding: 20px 0;
+        }  
         #contents>#nav>ul>li>a{
             display: block;
-            line-height: 25px;
+            line-height: 40px;
             border-bottom: 1px solid skyblue;
             text-indent: 14px;
-        }
-        #contents>#nav>ul>li:hover{
-            background: skyblue;
-        }
+            color: #666;
+        }       
         #contents>#nav>ul>li>a:hover{
-            color: #fff;
-        }
+            color: #ac0b0b;
+        }        
 
         /* maincontent style */
-        .main>h2,
-        .promo>h2{
-            margin: 20px 15px;
+        #maincontent>.main{
+            margin-left: 10px;
         }
-        .main>p,
-        .promo>p{
-            margin: 0 0 20px 10px;
+        #maincontent>div>h2{ /*#maincontent 밑의 div의 모든 h2*/
+            margin: 20px 0;
+            white-space: nowrap; /*줄바꿈을 안하겠다.*/
+            overflow: hidden; /*넘치는 글자는 보여주지말고*/
+            text-overflow: ellipsis; /*점처리를 하겠다. 추가로 h2에 title 넣어줘야 한다.*/
+        }
+        #maincontent>div>p{ /*#maincontent 밑의 div의 모든 p*/
+            /* margin: 20px 0; */
+            padding-bottom: 10px;
             text-indent: 14px;
             word-spacing: 2px; /*단어 사이의 여백*/
+            line-height: 24px;
         }
         
         /* footer style */
         #footer>p{
             text-align: center;
+            line-height: 24px;
         }
 
     </style>
@@ -133,7 +145,7 @@
             </nav>
             <div id="maincontent">
                 <div class="main">                   
-                    <h2>레이아웃에 대해서</h2>
+                    <h2 title="레이아웃에 대해서">레이아웃에 대해서</h2>
                     <p>
                         화면표현을 위한 마크업을 만들 필요없이 완벽하게 페이지 레이아웃을 짤 수 있다는 것은 css의 가장 큰장점 중 하나 입니다 하지만 css로 레이아웃을 만드는 것이 보통 어려운 일이 아니라고
                         알려져 있습니다. 특히 처음 접한 사람들이 이런 얘기를 많이 하게 되죠. 이런얘기가 나오게 되는 이유는 웹브러우저 마다 다른 특성을 보이기 때문이기도 하지만 대부분은 웹상에서 구할 수 있는
@@ -141,7 +153,7 @@
                         이해하지 못하고 사용하는데서 원인을 찾을 수도 있겠습니다. 이렇게 css 레이아웃 기법에 대해서 블렉박스처럼 사용하게 되면 원하는 결과는 금방 얻을 수 있지만 이언어를 이해할 수는 없습니다.
                     </p>
 
-                    <h2>디자인을 가로 중간에 배치하기</h2>
+                    <h2 title="디자인을 가로 중간에 배치하기">디자인을 가로 중간에 배치하기</h2>
                     <p>
                         한줄이 길게 표시되는 텍스트는 읽기가 어렵고 때론 짜증나는 일입니다. 큰 모니터의 보급이 높아지면서 화면 가독성 이 중요하다는 인식도 높아지고 있습니다.내용이 화면 중앙에 오도록하는 디자인은 이런 문제를 해결할 수 있는 방법 중의 하나겠죠. 화면 가로폭 전체에 표시되도록 하지 않고 짧게 줄인 내용을 가운데로 배치하면 한줄 한줄을 쉽게 읽을 수 있습니다.
                     </p>
@@ -150,7 +162,7 @@
                     </p>
                 </div>    
                 <div class="promo">            
-                    <h2>플로트기반의 레이아웃만들기</h2>
+                    <h2 title="플로트기반의 레이아웃만들기">플로트기반의 레이아웃만들기</h2>
                     <p>
                         css기반으로 레이아웃을 만드는 데는 절대 위치지정 방식이나 음수 마진값사용 방식이 있습니다. 그 중에서 플로트를 기반으로 한 레이아웃이 가장 쉬운 방식이라 할 수 있습니다.
                     </p>
