--- a/13day/threeColLayout_유동적레이아웃.html
+++ b/13day/threeColLayout_유동적레이아웃.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3단 레이아웃</title>
+    <title>3단 레이아웃_유동적 레이아웃</title>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@100..900&display=swap" rel="stylesheet">
     <style>
         /* basic style */
@@ -19,10 +19,10 @@
 
         /* layout style */
         #wrapper{ /* 여기에 패딩을 주면 총 길이가 늘어나니까 그 안에 다른 자식들에게 패딩을 줌 */
-            width: 720px;
+            width: 80%;
             position: relative;
             left: 50%;
-            margin-left: -360px;
+            margin-left: -40%;
         }
 
 
@@ -55,19 +55,21 @@
             padding-bottom: 50px;
         }
         #contents>#nav{
-            width: 180px;
+            width: 28%;
             float: left;
+            padding: 1%;
         }
         #maincontent{
-            width: 500px;            
+            width: 66%;            
             float: right;
+            padding: 1%;
         }
         #maincontent>.main{
-            width: 280px;
+            width: 64%;
             float: left;
         }
         #maincontent>.promo{
-            width: 180px;
+            width: 26%;
             float: right;
         }
         
@@ -180,3 +182,8 @@
     </div>      
 </body>
 </html>
+<!-- 
+레이아웃에 단위를 
+px로 사용하면 고정적인 레이아웃.
+% 단위를 사용하면 유동적인 레이아웃.
+-->
