--- a/14day/book2.html
+++ b/14day/book2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>반고정 반유동 레이아웃 페이지</title> 
-    <link rel="stylesheet" href="css/font.css">  
+    <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
     <div id="wrapper">
@@ -17,7 +17,7 @@
             </div> <!--header-inner end-->
         </div> <!--header end-->
         <nav id="lnb">
-            <div class="lnb inner">
+            <div class="lnb-inner">
                 <ul>
                     <li><a href="#">What's New</a></li>
                     <li><a href="#">Table of Contents</a></li>
