--- a/14day/book2.html
+++ b/14day/book2.html
@@ -16,23 +16,25 @@
                 <h2>A New Riders Book by Charles Wyke-smith</h2>  
             </div> <!--header-inner end-->
         </div> <!--header end-->
+
         <nav id="lnb">
             <div class="lnb-inner">
                 <ul>
                     <li><a href="#">What's New</a></li>
                     <li><a href="#">Table of Contents</a></li>
                     <li><a href="#">CSS Link</a>
-                        <ul>
-                            <li><a href="#">Link1</a>
-                            <li><a href="#">Link2</a>
-                            <li><a href="#">Link3</a>
-                            <li><a href="#">Link4</a>
+                        <ul class="subMenu">
+                            <li><a href="#">Link1</a></li>
+                            <li><a href="#">Link2</a></li>
+                            <li><a href="#">Link3</a></li>
+                            <li><a href="#">Link4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div> <!--lnb inner end-->
         </nav> <!--lnb end-->
+
         <div id="contents">        
             <div id="contents-inner">
                 <div class="content">
@@ -95,6 +97,7 @@
                 </div> <!--promo end-->
             </div> <!--contents-inner end-->
         </div> <!--contents end-->
+
         <div id="footer">
             <div class="footer-inner">
             ⓒ 2007 - Stylin' with CSS: A Designer's Guide, Second Edition by Charles Wyke-Smith
