--- a/16day/nanum-bbs.html
+++ b/16day/nanum-bbs.html
@@ -6,26 +6,64 @@
     <title>나눔복지관 게시글 페이지 만들기</title>
 </head>
     <style>
+
+        /* layout style */
         #header{
+            background: #D6F0FC;
             width: 100%;
             height: 366px;
+        }
+        .header-box{
+            width: 900px;
+            height: 366px;
             background: #FFE2C0;
+            margin: 0 auto;            
         }
         #content{
+            background: #E6EDAC;
             width: 900px;
             height: 760px;
-            background: #E6EDAC;
             margin: 0 auto;
         }
+        .left{
+            width: 224px;
+            height: 720px;
+            float: left;
+            background: #D1C5E1;
+        }
+        .conTop{
+            background: #EE99C2;
+            height: 274px;
+            margin-bottom: 54px;
+        }
+        .conBottom{
+            background: #EE99C2;
+            height: 170px;
+        }
+        .right{
+            width: 640px;
+            height: 720px;
+            float: right;
+            background: #D1C5E1;
+        }
+        .location{
+            background: #EE99C2;
+            height: 40px;
+            margin-bottom: 38px;
+        }
+        .bbs{
+            background: #EE99C2;
+            height: 400px;
+        }
         #footer1{
+            background: #FDDECE;
             width: 100%;
             height: 10px;
-            background: #FDDECE;
         }
         #footer2{
+            background: #F9A778;
             width: 900px;
             height: 60px;
-            background: #F9A778;
             margin: 0 auto;
         }
     </style>
@@ -54,7 +92,22 @@
         </div>
     </div>
     <div id="content">
-        content
+        <div class="left">
+            <div class="conTop"> 
+
+            </div>
+            <div class="conBottom">
+                
+            </div>
+        </div>
+        <div class="right">
+            <div class="location">
+                
+            </div>
+            <div class="bbs">
+
+            </div>
+        </div>
     </div>
     <div id="footer1">
         footer1
