--- a/18day/nanum-bbs.html
+++ b/18day/nanum-bbs.html
@@ -167,10 +167,10 @@
         </div>
     </div>
     <div id="footer1">
-        footer1
     </div>
     <div id="footer2">
-        footer2
+        <p class="footer-lefe">서울특별시 가나구 다라동 123번지 아사복지관 TEL 02. 1234. 5678 / FAX 02. 1234. 5679  EMAIL : help@asawelfare.com </p>
+        <p class="footer-right">COPYRIGHT (C) 2009 ASAWELFARE ALL RIGHTS RESERVED.</p>
     </div>
 </body>
 </html>
