--- a/18day/nanum-main.html
+++ b/18day/nanum-main.html
@@ -8,7 +8,7 @@
 </head>
 <body id="nanum-main">
     <div id="header">
-         <h1 title="나눔복지관">
+        <h1 title="나눔복지관">
             <a href="#">
                 <img src="image/log.png" alt="나눔복지관">
             </a>
@@ -45,19 +45,43 @@
         </ul>
     </nav>
     <div id="contents">
-
+        <div class="conLeft">
+            <input type="radio" name="tabs" id="first" checked>
+            <input type="radio" name="tabs" id="second">
+            <div class="button">
+                <label for="first">복지뉴스</label>
+                <label for="second">공지사항</label>
+            </div>
+            <ul class="tablist">
+                <li><a href="#">2025년 여름방학강습 안내</a></li>
+                <li><a href="#">장애인 캠프보내기 모금 캠페인</a></li>
+                <li><a href="#">사랑나눔바자회11월 모임안내</a></li>
+                <li><a href="#">홈페이지가 리뉴얼되었습니다.</a></li>
+            </ul>   
+            <ul class="tablist">
+                <li><a href="#">모유수유를 위한 의료요원교육</a></li>
+                <li><a href="#">인도네시아 지진 쓰나미피해돕기</a></li>
+                <li><a href="#">어린이 지구촌체험관행사</a></li>
+                <li><a href="#">유엔총회서글로벌청년청사진제시</a></li>
+            </ul>
+        </div>
+        <div class="conCenter">
+            conCenter
+        </div>
+        <div class="conRight">
+            conCenter
+        </div>
     </div>
     <div id="footer1">
 
     </div>
     <div id="footer2">
-       <p class="footer-left">
-        서울특별시 가나구 다라동 123번지 아사복지관
-        TEL 02. 1234. 5678 / FAX 02. 1234. 5679  EMAIL : help@asawelfare.com 
-    </p>
-    <p class="footer-right">
-        COPYRIGHT (C) 2009 ASAWELFARE ALL RIGHTS RESERVED. 
-    </p>     
+        <p class="footer-left">
+            서울특별시 가나구 다라동 123번지 아사복지관 TEL 02. 1234. 5678 / FAX 02. 1234. 5679  EMAIL : help@asawelfare.com 
+        </p>
+        <p class="footer-right">
+            COPYRIGHT (C) 2009 ASAWELFARE ALL RIGHTS RESERVED. 
+        </p>
     </div>    
 </body>
 </html>
